<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <!--
    Deploy: mvn clean deploy (includes javadoc)
    Package: mvn clean package assembly:single
      Release: mvn release:clean
               mvn release:prepare
               mvn release:perform
   -->


  <groupId>net.sf.cssbox</groupId>
  <artifactId>swingbox</artifactId>
  <version>1.2-SNAPSHOT</version>
  <name>SwingBox</name>
  <description>
    SwingBox is a Java Swing component that allows displaying the (X)HTML documents including the CSS
    support. It is designed as a JEditorPane replacement with considerably better rendering results. SwingBox is pure
    Java and it is using the CSSBox rendering engine for rendering the documents.
  </description>
  <url>http://cssbox.sourceforge.net/swingbox</url>

  <licenses>
    <license>
      <name>GNU Lesser General Public License 3.0</name>
      <url>http://www.gnu.org/licenses/lgpl-3.0.txt</url>
      <distribution>repo</distribution>
    </license>
  </licenses>

  <developers>
    <developer>
      <name>Radek Burget</name>
      <roles>
        <role>Main developer &amp; project leader</role>
      </roles>
    </developer>
    <developer>
      <name>Peter Bielik</name>
      <roles>
        <role>Former developer</role>
      </roles>
    </developer>
  </developers>
  <contributors>
    <contributor>
      <name>Kaj Kandler</name>
      <email>kajkandler@conficio.com</email>
      <organization>Conficio</organization>
      <organizationUrl>http://conficio.com</organizationUrl>
    </contributor>
    <contributor>
      <name>Dave Jarvis</name>
      <organization>White Magic Software, Ltd.</organization>
      <organizationUrl>https://whitemagicsoftware.com</organizationUrl>
    </contributor>
  </contributors>

  <parent>
    <groupId>org.sonatype.oss</groupId>
    <artifactId>oss-parent</artifactId>
    <version>7</version>
  </parent>

  <scm>
    <url>https://github.com/radkovo/SwingBox</url>
    <connection>scm:git:git@github.com:radkovo/SwingBox.git</connection>
    <developerConnection>scm:git:git@github.com:radkovo/SwingBox.git</developerConnection>
    <tag>HEAD</tag>
  </scm>

  <repositories>
    <repository>
      <id>MavenCentral</id>
      <name>Maven Central</name>
      <url>https://repo1.maven.org/maven2/</url>
    </repository>
  </repositories>

  <dependencies>
    <dependency>
      <groupId>net.sf.cssbox</groupId>
      <artifactId>cssbox</artifactId>
      <version>4.17</version>
    </dependency>
    <dependency>
      <groupId>net.sf.cssbox</groupId>
      <artifactId>jstyleparser</artifactId>
      <version>3.5</version>
    </dependency>
    <dependency>
      <groupId>commons-io</groupId>
      <artifactId>commons-io</artifactId>
      <version>2.6</version>
    </dependency>
    <dependency>
      <groupId>xml-apis</groupId>
      <artifactId>xml-apis</artifactId>
      <version>1.4.01</version>
      <scope>provided</scope>
    </dependency>
  </dependencies>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.0</version>
        <configuration>
          <release>14</release>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-resources-plugin</artifactId>
        <version>2.4</version>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>2.4.3</version>
      </plugin>

      <plugin>
        <artifactId>maven-assembly-plugin</artifactId>
        <version>2.4.1</version>
        <configuration>
          <descriptors>
            <descriptor>/src/main/assembly/dist.xml</descriptor>
          </descriptors>
          <archive>
            <manifest>
              <mainClass>org.fit.cssbox.swingbox.demo.SwingBrowser</mainClass>
            </manifest>
          </archive>
          <descriptorRefs>
            <descriptorRef>jar-with-dependencies</descriptorRef>
          </descriptorRefs>
          <appendAssemblyId>true</appendAssemblyId>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-source-plugin</artifactId>
        <version>2.2.1</version>
        <executions>
          <execution>
            <id>attach-sources</id>
            <phase>package</phase>
            <goals>
              <goal>jar-no-fork</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>
        <version>3.2.0</version>
        <executions>
          <execution>
            <id>attach-javadocs</id>
            <phase>package</phase>
            <goals>
              <goal>jar</goal>
            </goals>
            <configuration>
              <show>protected</show>

              <!-- Prevent Exit code: 1 - javadoc: error -->
              <detectJavaApiLink>false</detectJavaApiLink>
            </configuration>
          </execution>
        </executions>
      </plugin>

    </plugins>

    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-release-plugin</artifactId>
          <version>2.5</version>
          <configuration>
            <mavenExecutorId>forked-path</mavenExecutorId>
            <useReleaseProfile>false</useReleaseProfile>
            <arguments>-Psonatype-oss-release</arguments>
          </configuration>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>

  <reporting>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>
        <version>3.2.0</version>
        <configuration>
          <show>protected</show>
        </configuration>
      </plugin>
    </plugins>
  </reporting>

  <profiles>
    <profile>
      <id>release-sign-artifacts</id>
      <activation>
        <property>
          <name>performRelease</name>
          <value>true</value>
        </property>
      </activation>
      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-gpg-plugin</artifactId>
            <version>1.5</version>
            <executions>
              <execution>
                <id>sign-artifacts</id>
                <phase>verify</phase>
                <goals>
                  <goal>sign</goal>
                </goals>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>
</project>
